[package]
name = "ndisapi"
version = "0.3.0"
edition = "2021"
authors = ["Vadim Smirnov <vadim@ntkernel.com>"]
description = "Windows Packet Filter API for Rust"
license = "Apache-2.0"
documentation = "https://docs.rs/ndisapi"
repository = "https://github.com/firezone/ndisapi"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.1.0"
futures = { version = "0.3.28", optional = true }

[features]
async = ["futures"]

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinSock",
    "Win32_System_SystemInformation",
    ]

[dev-dependencies]
etherparse = "0.13"
clap = {version = "4.0.32", features = ["derive"]}
ctrlc = "3.2.4"
futures = "0.3.28"
tokio = { version = "1.28.1", features = ["full"] }

[[example]]
name = "async-passthru"
required-features = ["async"]

[[example]]
name = "async-packthru"
required-features = ["async"]