[package]
name = "ndisapi-rs"
version = "0.4.3"
edition = "2021"
authors = ["Vadim Smirnov <vadim@ntkernel.com>"]
description = "Rust crate for interacting with the Windows Packet Filter driver (NDISAPI)"
license = "Apache-2.0"
documentation = "https://docs.rs/ndisapi-rs"
repository = "https://github.com/wiresock/ndisapi-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.1.0"
futures = "0.3.28"
uuid = { version = "1.3", features = ["v4", "serde", "v6"] }
ipnetwork = "0.20.0"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_SystemInformation",
    ]

[dev-dependencies]
etherparse = "0.13"
clap = {version = "4.0.32", features = ["derive"]}
ctrlc = "3.2.4"
futures = "0.3.28"
tokio = { version = "1.28.1", features = ["full"] }

