[package]
name = "ndisapi"
version = "0.6.5"
edition = "2021"
authors = ["Vadim Smirnov <vadim@ntkernel.com>"]
description = "Rust crate for interacting with the Windows Packet Filter driver (NDISAPI)"
license = "Apache-2.0"
documentation = "https://docs.rs/ndisapi"
repository = "https://github.com/wiresock/ndisapi-rs"
readme = "README.md"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[dependencies]
bitflags = "2.10.0"
futures = "0.3.30"
uuid = { version = "1.19.0", features = ["v4", "serde", "v6"] }
ipnetwork = "0.21.1"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_SystemInformation",
]

[dev-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ctrlc = "3.4.4"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
smoltcp = "0.12.0"
prettytable-rs = "0.10.0"
crossterm = "0.29.0"
